# GuessIOServer

./: .dockerignore  .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  Dockerfile  README.md  SETUP.md  setup.bat  setup.ps1  vcpkg.json
proto/: guessio.proto
proto/proto_gen/: guessio.grpc.pb.cc  guessio.grpc.pb.h  guessio.pb.cc  guessio.pb.h
src/: GameProtocol.cpp  GameProtocol.h  TwitchBotManager.cpp  TwitchBotManager.h  TwitchClient.cpp  TwitchClient.h  grpc_server.cpp  grpc_server.h  main.cpp  room.cpp  room.h  roomManager.cpp  roomManager.h  server.cpp  server.h  session.cpp  session.h
